--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.2.0"
+    "react-router-dom": "^6.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
@@ -29,10 +30,10 @@
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
-    "node-sass": "^8.0.0",
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.5.0",
+    "node-sass": "^8.0.0",
     "react-refresh": "^0.14.0",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
